add links to projectposts

--- a/src/pages/projects/course-2-project.mdx
+++ b/src/pages/projects/course-2-project.mdx
@@ -1,11 +1,8 @@
 ---
 title: "My Second Project"
-date: "date
-sort_field = "B"
+date: "2021-10-11"
 ---
 
 # Title
 
 Information about this project
-
-## Subtitle 
