--- a/src/posts/course-3-project.mdx
+++ b/src/posts/course-3-project.mdx
@@ -1,6 +1,6 @@
 ---
-title: "My First Project"
-date: "2021-01-01"
+title: "My Third Project"
+date: "2021-11-01"
 quickdetail: "Here is some quick summary detail about this post. Fusce convallis turpis eu nulla sollicitudin efficitur. Aenean quis ultrices ante. Fusce interdum et magna non interdum. Aenean sed libero sagittis, tempor tortor nec, gravida velit. Fusce euismod venenatis tellus non efficitur. Curabitur tincidunt venenatis mauris, quis volutpat erat luctus sit amet. Nunc ut molestie elit."
 ---
 
