--- a/src/projects/ETEC510-rationales-for-elearning.mdx
+++ b/src/projects/ETEC510-rationales-for-elearning.mdx
@@ -1,10 +1,18 @@
 ---
 title: "Assignment 1 - Analysis and Comparison of Rationales for E-Learning"
 date: "2019-06-02"
-quickdetail: "Prepared for ETEC 520, Dr. Mark Bullen"
+quickdetail: "A paper written for ETEC 510 where we were tasked with comparing institutional rationales for e-learning."
 course: "ETEC 510"
 ---
 
+## Reflection
+-
+
+## Artifact
+
+> Note: The goal is to rewrite this as a powerpoint slide deck
+
+# Paper 
 ## Queen’s University
 To understand Queen’s University’s rationale for e-learning I have reviewed documents that relate to the overall strategic plan. Each of these documents informs the others and offers the best overall picture of the university’s strategy regarding e-learning. In addition, these documents give insight to the changing landscape and prioritization of e-learning over time. The primary documents I will discuss are “The Strategic Framework” (2014) and “Online Education Planning: Digital Learning Opportunities” (Online Education Planning Report) (2018). 
 Queen’s University launched a 5-year The Strategic Framework in 2014 that includes four strategic drivers which are the “priorities that will guide our decision making over the next five years” (p. 1). The Office of the Principal website (https://www.queensu.ca/principal/planning-initiatives/strategic-framework) indicates that the framework is meant to align with the Academic Plan (last updated in 2011) and the university’s Strategic Mandate Agreement (SMA) with the Ontario Ministry of Advanced Education and Skills Development (first cycle in 2014, second cycle in 2017). The Teaching and Learning Action Plan (2014) was also developed to support the drivers of the strategic framework. Queen’s University references Online Learning under the umbrella of a larger Digital Planning Framework (2018), specifically in “Online Education Planning: Digital Learning Opportunities” (2018), which are meant to support the institution’s strategy. Figure 1. Shows the timeline that each of the document’s proposes to fall within, as well as the key components derived from each document. 
@@ -72,3 +80,5 @@ http://flexible-learning2015.sites.olt.ubc.ca/files/2015/04/fl_strategy_septembe
 - The University of British Columbia. (2018). Shaping UBC’s Next Century – Strategic Plan 2018-2028). Retrieved from: https://strategicplan.ubc.ca/wp-content/uploads/2018/04/2018_UBC_Strategic_Plan_Full-20180425.pdf
 - The University of British Columbia. (2019, May). Examples of Learning Opportunities. Retrieved from: https://extendedlearning.ubc.ca/online-learning-advancement-fund/examples
 - Zemsky, R., & Massy F.W. (2004). Thwarted Innovation: What Happened to E-Learning and Why. Learner Alliance. Retrieved from: https://www.researchgate.net/publication/201382274_Thwarted_Innovation_What_Happened_to_E-Learning_and_Why
+
+## Educational Technology and Institutions
