--- a/src/projects/ETEC-neuroscience-conference.mdx
+++ b/src/projects/ETEC-neuroscience-conference.mdx
@@ -1,4 +1,3 @@
-
 ---
 title: "Neuroscience and learning introductory course"
 date: "2019-06-02"
@@ -6,4 +5,6 @@ quickdetail: "A course developed in Rise Articulate about neuroscience and learn
 course: ""
 ---
 
-<iframe src="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/"></iframe>
+<iframe style="width: 960px; height: 720px; margin: 10px; position: relative;" 
+src="https://rise.articulate.com/share/kAPXNTL2603967LvhLp7PRUNXFe7UJm3#/">
+</iframe>
