--- a/src/projects/ETEC512-learning-concept-map.mdx
+++ b/src/projects/ETEC512-learning-concept-map.mdx
@@ -12,7 +12,13 @@ quickdetail: "A concept map developed for ETEC 512"
 ## Artifact
 This concept map was developed to demonstrate understanding of the history and context of important learning theories. This was one of (many) concept maps I developed throughout the MET program. 
 
-<div style="width: 960px; height: 720px; margin: 10px; position: relative;"><iframe allowfullscreen frameborder="0" style="width:960px; height:720px" src="https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e" id="Q.OpdackJDJZ"></iframe></div>
+<div style="width: 960px; height: 720px; margin: 10px; position: relative;">
+    <iframe allowfullscreen 
+    frameborder="0" 
+    style="width:960px; height:720px" 
+    src="https://lucid.app/documents/embeddedchart/5cbf4c24-0cac-4c11-acba-bb4c5a0baa9e" id="Q.OpdackJDJZ">
+    </iframe>
+    </div>
 
 ## Concept Mapping 
 **To be written**
