--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -16,4 +16,12 @@ src="https://docs.google.com/document/d/e/2PACX-1vR16tDV6T63lNrhw_-71jZtVB-RgfDJ
 <iframe src="https://docs.google.com/document/d/e/2PACX-1vRHePyEQu57inJzdvaPAI6unH5vfIvPWmtJmrUFnFXqhbQTdsP3e5TLQZZxK2STj5Hce0k4TBjn07k-/pub?embedded=true"></iframe>
 </div>
 
+import PDFViewer from '../components/pdf-viewer';
+import PDFJSBackend from '../backends/pdfjs';
+
+<div class="pdf-container"> 
+<PDFViewer backend={PDFJSBackend} src="/pdf.pdf"
+/>
+</div>
+
 ## Reflection
