--- a/src/projects/ETEC520-rationales-for-elearning.mdx
+++ b/src/projects/ETEC520-rationales-for-elearning.mdx
@@ -1,18 +1,32 @@
 ---
 title: "Rationales for e-learning"
 date: "2019-06-02"
-quickdetail: "A paper written for ETEC 510 where we were tasked with comparing institutional rationales for e-learning."
+quickdetail: "A paper written for ETEC 520 where we were tasked with comparing institutional rationales for e-learning."
 course: "ETEC 520"
+embeddedImagesLocal: 
+    - etec520_ubc_elearning.png
 ---
 
-> Goal: to review and create a powerpoint presentation version
+import i from './etec520_ubc_elearning.png'
+import o from '../pdfs/ETEC520_1_.pdf'
 
-import PDFViewer from '../components/pdf-viewer';
-import PDFJSBackend from '../backends/pdfjs';
+In ETEC 520 we had a series of assignments that asked us to evaluate institutional approaches, preparedness for, and implementation of **e-learning**. This was one of the first courses that introduced concepts about educational technology at an institutional level. In the creation of these artifacts, it became apparent that **institutional culture** is a hard-to-define yet important consideration when considering educational technology at scale. 
 
-<div class="pdf-container"> 
-<PDFViewer backend={PDFJSBackend} src="/pdf.pdf"
-/>
+<div class="pdf-container">
+<img src={i} />
 </div>
 
-## Reflection
+## Why Were Institutions Adopting e-Learning? 
+> (in 2014, anyway)
+
+1. For financial stability
+2. To remain competitive
+3. For the student experience
+
+
+## Full paper
+<object data = {o} height="700px" width="900px"/>
+
+<br></br>
+
+> Improvements: create slide deck to summarize paper
